--- a/scss/components/_responsive-calendar.scss
+++ b/scss/components/_responsive-calendar.scss
@@ -10,7 +10,7 @@
 
   td,
   th {
-    padding: 7px 0;
+    padding: 0;
     width: 100%;
   }
 }
